--- a/FinPlan.Web/Components/App.razor
+++ b/FinPlan.Web/Components/App.razor
@@ -17,6 +17,7 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+    <script src="@Assets["lib/bootstrap/dist/js/bootstrap.bundle.min.js"]"></script>
     <script src="js/excelExport.js"></script>
 </body>
 
