--- a/FinPlan.Web/Components/Layout/NavMenu.razor
+++ b/FinPlan.Web/Components/Layout/NavMenu.razor
@@ -25,5 +25,11 @@
                 <span class="bi bi-wallet2" aria-hidden="true"></span> FIRE Planner
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="tabs">
+                <span class="bi bi-table" aria-hidden="true"></span> Data Tabs
+            </NavLink>
+        </div>
     </nav>
 </div>
