--- a/FinPlan.Web/Components/Layout/NavMenu.razor
+++ b/FinPlan.Web/Components/Layout/NavMenu.razor
@@ -31,5 +31,11 @@
                 <span class="bi bi-table" aria-hidden="true"></span> Data Tabs
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="family-savings">
+                <span class="bi bi-people" aria-hidden="true"></span> Family Savings
+            </NavLink>
+        </div>
     </nav>
 </div>
