--- a/FinPlan.Web/Components/ExportButton.razor
+++ b/FinPlan.Web/Components/ExportButton.razor
@@ -1,7 +1,7 @@
 @inject IExcelExportService ExcelService
 @inject IJSRuntime JSRuntime
 @using FinPlan.Web.Services
-@using static FinPlan.Web.Components.Pages.SavingsPlanner
+@using FinPlan.Web.Models
 
 <button @onclick="ExportToExcel" class="@CssClass">
     <i class="bi bi-file-excel"></i> @Text
